# datatype-inspector

./: CLAUDE.md  pyproject.toml  run.py
src/datatype_inspector/: __main__.py  app.py  inspector.py  models.py  teleport.py
static/: style.css
templates/: base.html  index.html
templates/partials/: history.html  history_detail.html  not_found.html  progress.html  result_row.html
