[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datatype-inspector"
version = "0.1.0"
description = "Web tool to inspect MySQL column data types across all RDS instances in a Teleport cluster"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "pymysql>=1.1.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
where = ["src"]
